--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -34,6 +34,7 @@
     "@turf/centroid": "^5.0.4",
     "alasql": "^0.4.0",
     "classybrew": "0.0.3",
+    "flora-sql-parser": "^0.7.5",
     "highland": "^3.0.0-beta.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
