--- a/packages/koop-logger/package.json
+++ b/packages/koop-logger/package.json
@@ -4,7 +4,7 @@
   "description": "A shared logger for Koop",
   "main": "index.js",
   "scripts": {
-    "compile": "babel src --out-dir .",
+    "compile": "buble -i src -o dist",
     "test": "standard src"
   },
   "repository": {
@@ -21,7 +21,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
+    "buble": "^0.18.0",
     "standard": "^10.0.3"
   }
 }
