--- a/packages/koop-logger/.travis.yml
+++ b/packages/koop-logger/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - 6
+  - 8
 sudo: false # Enable docker-based containers
 cache:
   directories:
     - node_modules
 script:
-  - npm test
+  - yarn test
