--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/koopjs/winnow#readme",
   "dependencies": {
+    "@esri/proj-codes": "^1.0.4",
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/centroid": "^6.0.0",
     "alasql": "^0.4.0",
