--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -15,6 +15,7 @@
   "author": "Daniel Fenton <dfenton@esri.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@mapbox/geojsonhint": "^2.1.0",
     "chroma-js": "^1.3.4",
     "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
