Filter non wgs84 source data (#88)
* Refactor normalizeInSR and add a normalizeSR for general handling of SRS inputs wherever
* Add normalization of a option.sourceSR;  defaults to 'EPSG:4326'; pass its value to projections of filter geometries.
* Use srs npm to validate WKT

--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -43,6 +43,7 @@
     "ngeohash": "^0.6.0",
     "proj4": "^2.3.17",
     "simple-statistics": "^6.0.0",
+    "srs": "^1.2.0",
     "terraformer": "^1.0.7"
   },
   "devDependencies": {
