--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -35,6 +35,7 @@
     "@turf/centroid": "^6.0.0",
     "alasql": "^0.4.0",
     "classybrew": "0.0.3",
+    "esri-proj-codes": "^1.0.3",
     "flora-sql-parser": "^0.7.5",
     "highland": "^3.0.0-beta.3",
     "lodash": "^4.17.4",
@@ -42,9 +43,9 @@
     "ngeohash": "^0.6.0",
     "proj4": "^2.3.17",
     "simple-statistics": "^6.0.0",
-    "srs": "^1.2.0",
     "string-hash": "^1.1.3",
-    "terraformer": "^1.0.7"
+    "terraformer": "^1.0.7",
+    "wkt-parser": "^1.2.2"
   },
   "devDependencies": {
     "buble": "^0.19.0",
