--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -16,6 +16,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@mapbox/geojsonhint": "^2.1.0",
+    "chalk": "^2.4.2",
     "chroma-js": "^2.0.0",
     "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
