--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/koopjs/winnow#readme",
   "dependencies": {
     "@esri/proj-codes": "^2.2.0",
+    "@terraformer/spatial": "^2.0.7",
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/centroid": "^6.0.0",
     "alasql": "^0.6.2",
@@ -44,7 +45,6 @@
     "proj4": "^2.6.2",
     "simple-statistics": "^7.0.0",
     "string-hash": "^1.1.3",
-    "terraformer": "^1.0.7",
     "wkt-parser": "^1.2.2"
   },
   "devDependencies": {
