--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/koopjs/winnow#readme",
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
+    "@hapi/joi": "^17.1.1",
     "@terraformer/spatial": "^2.0.7",
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/centroid": "^6.0.0",
