--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "buble": "^0.20.0",
     "feature-parser": "^1.0.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.3",
     "standard": "^14.3.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.0.0"
