--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "buble": "^0.20.0",
     "feature-parser": "^1.0.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.3",
     "standard": "^14.3.0",
@@ -59,5 +61,13 @@
   },
   "optionalDependencies": {
     "farmhash": "^3.1.0"
+  },
+  "lint-staged": {
+    "*.js": "npm run fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
