--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "winnow",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Apply sql-like filters to GeoJSON",
   "main": "index.js",
   "directories": {
@@ -22,7 +22,15 @@
     "geoservices",
     "query"
   ],
-  "author": "Daniel Fenton <dfenton@esri.com>",
+  "contributors": [
+    {
+      "name": "Rich Gwozdz",
+      "email": "rgwozdz@esri.com"
+    },
+    {
+      "name": "Daniel Fenton"
+    }
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/koopjs/winnow/issues"
