--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -1,21 +1,30 @@
 {
   "name": "koop",
   "description": "Transform, query, & download geospatial data on the web",
-  "version": "4.0.5",
-  "author": {
-    "name": "Chris Helm"
-  },
+  "version": "4.1.0",
   "bugs": {
     "url": "https://github.com/koopjs/koop/issues"
   },
   "contributors": [
-    "Rich Gwozdz <rgwozdz@esri.com>",
-    "Haoliang Yu <hyu@esri.com>"
+    {
+      "name": "Rich Gwozdz",
+      "email": "rgwozdz@esri.com"
+    },
+    {
+      "name": "Haoliang Yu",
+      "email": "hyu@esri.com"
+    },
+    {
+      "name": "Daniel Fenton"
+    },
+    {
+      "name": "Chris Helm"
+    }
   ],
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "@koopjs/logger": "^2.0.6",
-    "@koopjs/output-geoservices": "^2.1.0",
+    "@koopjs/output-geoservices": "^2.2.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "compression": "^1.7.4",
