--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -27,7 +27,7 @@
     "chroma-js": "^2.0.0",
     "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
-    "joi": "^14.3.0",
+    "joi": "^17.3.0",
     "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "terraformer-arcgis-parser": "^1.0.4",
@@ -35,10 +35,12 @@
   },
   "devDependencies": {
     "async": "^3.0.1",
-    "buble": "^0.20.0",
     "express": "^4.14.0",
     "mocha": "^7.0.1",
+    "proxyquire": "^2.1.3",
     "should": "^13.0.0",
+    "should-sinon": "0.0.6",
+    "sinon": "^9.2.3",
     "standard": "^14.3.0",
     "supertest": "^4.0.0"
   },
