--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -45,6 +45,7 @@
     "@terraformer/spatial": "^2.0.7",
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/centroid": "^6.0.0",
+    "@types/geojson": "^7946.0.7",
     "alasql": "^0.7.0",
     "classybrew": "0.0.3",
     "flora-sql-parser": "^0.9.3",
@@ -77,5 +78,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "types": "index.d.ts"
 }
