--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "standard && mocha test/**/*.spec.js --recursive -t 5000",
+    "test": "standard && mocha 'test/**/*.spec.js' --recursive -t 5000",
     "fix": "standard --fix"
   },
   "contributors": [
@@ -23,6 +23,8 @@
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
     "@mapbox/geojsonhint": "^3.0.0",
+    "@terraformer/arcgis": "^2.0.7",
+    "@terraformer/spatial": "^2.0.7",
     "chalk": "^4.0.0",
     "chroma-js": "^2.0.0",
     "classybrew": "0.0.3",
