--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -29,8 +29,9 @@
     "chroma-js": "^2.0.0",
     "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
+    "iso-datestring-validator": "^2.2.0",
     "joi": "^17.3.0",
-    "lodash": "^4.12.0",
+    "lodash": "^4.17.21",
     "moment": "^2.13.0",
     "terraformer-arcgis-parser": "^1.0.4",
     "winnow": "^2.2.2"
