Replace flora-sql-parser (#209)
* first draft and tests pass

* update comments

* add an overview

--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -46,12 +46,12 @@
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/centroid": "^6.0.0",
     "@types/geojson": "^7946.0.7",
-    "alasql": "^0.7.0",
+    "alasql": "^1.0.0",
     "classybrew": "0.0.3",
-    "flora-sql-parser": "^0.9.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ngeohash": "^0.6.3",
+    "pgsql-ast-parser": "^10.0.2",
     "proj4": "^2.6.2",
     "simple-statistics": "^7.0.0",
     "string-hash": "^1.1.3",
