--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -23,21 +23,17 @@
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
     "@mapbox/geojsonhint": "^3.0.0",
-    "@terraformer/arcgis": "^2.0.7",
     "@terraformer/spatial": "^2.0.7",
     "chalk": "^4.0.0",
     "chroma-js": "^2.0.0",
-    "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
     "iso-datestring-validator": "^2.2.0",
     "joi": "^17.3.0",
     "lodash": "^4.17.21",
-    "moment": "^2.13.0",
-    "terraformer-arcgis-parser": "^1.0.4",
-    "winnow": "^2.2.2"
+    "winnow": "^2.2.2",
+    "wkt-parser": "^1.3.2"
   },
   "devDependencies": {
-    "async": "^3.0.1",
     "express": "^4.14.0",
     "mocha": "^7.0.1",
     "proxyquire": "^2.1.3",
