--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "test": "standard && mocha 'test/**/*.spec.js' --recursive -t 5000",
+    "test:cov": "nyc --reporter=html mocha 'test/**/*.spec.js' ",
+    "test:cov-unit": "nyc --reporter=html mocha 'test/unit/**/*.spec.js' ",
     "fix": "standard --fix"
   },
   "contributors": [
@@ -22,11 +24,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
-    "geojson-validation": "^1.0.2",
     "@terraformer/spatial": "^2.0.7",
     "chalk": "^4.0.0",
     "chroma-js": "^2.0.0",
     "esri-extent": "^1.1.1",
+    "geojson-validation": "^1.0.2",
     "iso-datestring-validator": "^2.2.0",
     "joi": "^17.3.0",
     "lodash": "^4.17.21",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "express": "^4.14.0",
     "mocha": "^7.0.1",
+    "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "should": "^13.0.0",
     "should-sinon": "0.0.6",
