--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "featureserver",
+  "name": "@koopjs/featureserver",
   "version": "4.1.0",
   "description": "*An open source implementation of the GeoServices specification*",
   "main": "index.js",
@@ -7,10 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "standard && mocha 'test/**/*.spec.js' --recursive -t 5000",
+    "test": "mocha 'test/**/*.spec.js' --recursive -t 5000",
     "test:cov": "nyc --reporter=html mocha 'test/**/*.spec.js' ",
-    "test:cov-unit": "nyc --reporter=html mocha 'test/unit/**/*.spec.js' ",
-    "fix": "standard --fix"
+    "test:cov-unit": "nyc --reporter=html mocha 'test/unit/**/*.spec.js' "
   },
   "contributors": [
     {
@@ -32,7 +31,6 @@
     "iso-datestring-validator": "^2.2.0",
     "joi": "^17.3.0",
     "lodash": "^4.17.21",
-    "winnow": "^2.5.2",
     "wkt-parser": "^1.3.2"
   },
   "devDependencies": {
@@ -43,7 +41,6 @@
     "should": "^13.0.0",
     "should-sinon": "0.0.6",
     "sinon": "^9.2.3",
-    "standard": "^14.3.0",
     "supertest": "^4.0.0"
   },
   "standard": {
