--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.23.1",
     "lerna": "^5.5.1",
     "nyc": "^15.1.0"
   }
