--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   ],
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.23.1",
     "jest": "^29.1.2",
     "lerna": "^5.5.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.0"
   },
   "dependencies": {
     "joi": "^17.6.2"
