--- a/.nycrc
+++ b/.nycrc
@@ -1,9 +1,9 @@
 {
     "all": true,
     "include": [
-        "packages/winnow/lib/**/*.js",
+        "packages/winnow/src/**/*.js",
         "packages/winnow/index.js",
-        "packages/featureserver/lib/**/*.js",
+        "packages/featureserver/src/**/*.js",
         "packages/featureserver/index.js",
         "packages/koop-cache-memory/**/*.js",
         "packages/koop-logger/**/*.js"
