--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -35,13 +35,17 @@
     }
   ],
   "license": "Apache-2.0",
+  "files": [
+    "src/**/*.js",
+    "index.d.ts",
+    "!**/*.spec.js"
+  ],
   "bugs": {
-    "url": "https://github.com/koopjs/winnow/issues"
+    "url": "https://github.com/koopjs/koop/issues"
   },
-  "homepage": "https://github.com/koopjs/winnow#readme",
+  "homepage": "https://github.com/koopjs/koop#readme",
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
-    "@hapi/joi": "^17.1.1",
     "@terraformer/arcgis": "^2.1.1",
     "@terraformer/spatial": "^2.1.2",
     "@turf/bbox-polygon": "^6.0.1",
@@ -49,6 +53,7 @@
     "@types/geojson": "^7946.0.7",
     "alasql": "^1.0.0",
     "classybrew": "0.0.3",
+    "joi": "^17.6.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ngeohash": "^0.6.3",
