Switch lerna to independent mode.

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "$schema": "node_modules/lerna/sche mas/lerna-schema.json",
   "useNx": true,
   "useWorkspaces": true,
-  "version": "0.0.0"
+  "version": "independent"
 }
