--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"packages/**/*.js\"",
-    "lint:fix": "eslint \"packages/**/*.js\" --fix"
+    "lint:fix": "eslint \"packages/**/*.js\" --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,23 @@
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.23.1",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lerna": "^5.5.1",
+    "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
+    "prettier": "^2.7.1",
     "supertest": "^6.3.0"
   },
-  "dependencies": {
-    "joi": "^17.6.2"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint --workspaces"
+    ]
   }
 }
