--- a/packages/koop-output-geoservices/package.json
+++ b/packages/koop-output-geoservices/package.json
@@ -2,7 +2,7 @@
   "name": "@koopjs/output-geoservices",
   "version": "3.1.5",
   "description": "Wraps https://github.com/featureserver/featureserver as a plugin for koop",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
