--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint \"packages/**/*.js\"",
     "lint:fix": "eslint \"packages/**/*.js\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,11 @@
   ],
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@commitlint/config-conventional": "^17.1.0",
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
+    "commitizen": "^4.2.5",
+    "cz-git": "^1.3.12",
     "eslint": "^8.23.1",
     "husky": "^8.0.1",
     "jest": "^29.1.2",
@@ -38,5 +42,11 @@
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "supertest": "^6.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git",
+      "czConfig": ".commitlintrc.js"
+    }
   }
 }
