chore: add lint-staged tooling

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.5",
+    "commitlint": "^17.2.0",
     "cz-git": "^1.3.12",
     "eslint": "^8.23.1",
     "husky": "^8.0.1",
@@ -48,5 +49,11 @@
       "path": "node_modules/cz-git",
       "czConfig": ".commitlintrc.js"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ],
+    "!*.js": []
   }
 }
