--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.5",
+    "commitlint": "^17.2.0",
     "cz-git": "^1.3.12",
     "eslint": "^8.23.1",
     "husky": "^8.0.1",
-    "jest": "^29.1.2",
+    "jest": "^28.1.3",
     "lerna": "^5.5.1",
     "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
@@ -64,5 +65,9 @@
       "eslint --fix"
     ],
     "!*.js": []
-  }
+  },
+  "volta": {
+		"node": "16.18.0",
+		"npm": "7.24.2"
+	}
 }
