chore: update-paths

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -8,8 +8,8 @@ on:
       - master
       - next
       - beta
-    paths-ignore:
-      - "**.md"
+    paths:
+      - "**/packages/**.js"
 
 jobs:
   pr-tests:
