--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:koop-output-geoservices": "(cd packages/koop-output-geoservices && npm test)",
     "test:winnow": "(cd packages/winnow && npm test)",
     "test:packages": "npm run test:featureserver && npm run test:koop-cache-memory && npm run test:koop-core && npm run test:koop-logger && npm run test:koop-output-geoservices && npm run test:winnow",
-    "test:e2e": "DATA_DIR=./test/provider-data jest ./test/*.spec.js"
+    "test:e2e": "DATA_DIR=./test/provider-data jest ./test/*.spec.js",
+    "release": "lerna publish --include-merged-tags --conventional-commits --changelog-preset conventionalcommits --create-release github --yes --message 'chore: release' --"
   },
   "repository": {
     "type": "git",
@@ -44,11 +45,13 @@
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.5",
     "commitlint": "^17.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.3.12",
     "eslint": "^8.23.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
-    "lerna": "^5.5.1",
+    "lerna": "^6.0.1",
+    "lerna-changelog": "^2.2.0",
     "lint-staged": "^13.0.3",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
@@ -67,7 +70,7 @@
     "!*.js": []
   },
   "volta": {
-		"node": "16.18.0",
-		"npm": "7.24.2"
-	}
+    "node": "16.18.0",
+    "npm": "7.24.2"
+  }
 }
