--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "node_modules/lerna/sche mas/lerna-schema.json",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
   "useWorkspaces": true,
   "version": "independent"
