--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   ],
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@changesets/cli": "^2.25.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
