--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -23,7 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
-    "@koopjs/winnow": "^2.5.2",
+    "@koopjs/winnow": "2.5.2",
     "@terraformer/spatial": "^2.0.7",
     "chalk": "^4.0.0",
     "chroma-js": "^2.0.0",
