--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -19,9 +19,9 @@
     }
   ],
   "dependencies": {
-    "@koopjs/cache-memory": "^2.0.2",
-    "@koopjs/logger": "^2.0.6",
-    "@koopjs/output-geoservices": "^3.1.5",
+    "@koopjs/cache-memory": "2.0.2",
+    "@koopjs/logger": "2.0.6",
+    "@koopjs/output-geoservices": "3.1.5",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "compression": "^1.7.4",
