--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,12 +43,18 @@ jobs:
       run: npm run version
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+
+    - name: Git add and commit
+      run: "git add --all && git commit -m 'chore: version and changelog' --no-verify"
+
     - name: Push versioning changes
       run: git push origin master --follow-tags --no-verify
     
     - name: Publish to NPM
       run: npm run release:npm
+
+    - name: Push versioning changes
+      run: git push origin master --follow-tags --no-verify
 
     - name: Github release
       run: npm run release:github
@@ -56,4 +62,5 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Remove .npmrc artifact
+      if: always()
       run: rm .npmrc
