--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "precommit": "lint-staged && npm test --workspaces",
     "test": "npm test --workspaces",
     "test:featureserver": "(cd packages/featureserver && npm test)",
-    "test:koop-cache-memory": "(cd packages/koop-cache-memory && npm test)",
+    "test:cache-memory": "(cd packages/cache-memory && npm test)",
     "test:koop-core": "(cd packages/koop-core && npm test)",
-    "test:koop-logger": "(cd packages/koop-logger && npm test)",
-    "test:koop-output-geoservices": "(cd packages/koop-output-geoservices && npm test)",
+    "test:logger": "(cd packages/logger && npm test)",
+    "test:output-geoservices": "(cd packages/output-geoservices && npm test)",
     "test:winnow": "(cd packages/winnow && npm test)",
-    "test:packages": "npm run test:featureserver && npm run test:koop-cache-memory && npm run test:koop-core && npm run test:koop-logger && npm run test:koop-output-geoservices && npm run test:winnow",
+    "test:packages": "npm run test:featureserver && npm run test:cache-memory && npm run test:koop-core && npm run test:logger && npm run test:output-geoservices && npm run test:winnow",
     "test:e2e": "DATA_DIR=./test/provider-data jest ./test/*.spec.js",
     "version": "changeset version",
     "release:npm": "changeset publish",
@@ -36,9 +36,9 @@
   "workspaces": [
     "packages/winnow",
     "packages/featureserver",
-    "packages/koop-output-geoservices",
-    "packages/koop-logger",
-    "packages/koop-cache-memory",
+    "packages/output-geoservices",
+    "packages/logger",
+    "packages/cache-memory",
     "packages/koop-core"
   ],
   "devDependencies": {
@@ -48,6 +48,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@koopjs/provider-file-geojson": "^2.0.0",
     "babel-eslint": "^10.1.0",
+    "byline": "^5.0.0",
     "commitizen": "^4.2.5",
     "commitlint": "^17.2.0",
     "cz-conventional-changelog": "^3.3.0",
