--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@koopjs/output-geoservices",
   "version": "4.0.1",
-  "description": "Wraps https://github.com/featureserver/featureserver as a plugin for koop",
+  "description": "Wraps FeatureServer as a Koop output plugin",
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
