--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "tape '**/*.spec.js' | tap-spec",
     "test:cov": "nyc --reporter=text-summary --reporter=html tape '**/*.spec.js' | tap-spec",
-    "test:cov:unit": "nyc --reporter=text-summary --reporter=html tape 'lib/**/*.spec.js' | tap-spec",
+    "test:cov:unit": "nyc --reporter=text-summary --reporter=html tape 'src/**/*.spec.js' | tap-spec",
     "benchmark": "node benchmark/index.js",
     "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt"
   },
