--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "commit": "cz",
     "precommit": "lint-staged && npm test --workspaces",
     "test": "npm test --workspaces",
-    "test:cov": "npm run test:cov --workspaces",
-    "test:featureserver": "(cd packages/featureserver && npm test)",
-    "test:cache-memory": "(cd packages/cache-memory && npm test)",
-    "test:koop-core": "(cd packages/koop-core && npm test)",
-    "test:logger": "(cd packages/logger && npm test)",
-    "test:output-geoservices": "(cd packages/output-geoservices && npm test)",
-    "test:winnow": "(cd packages/winnow && npm test)",
-    "test:packages": "npm run test:featureserver && npm run test:cache-memory && npm run test:koop-core && npm run test:logger && npm run test:output-geoservices && npm run test:winnow",
+    "test:cov": "npm run test:cov --workspaces && npm run cov:compile && npm run cov:report",
+    "test:cov:unit": "npm run test:cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
+    "cov:compile": "nyc merge packages/cache-memory/.nyc_output .nyc_output/cache-memory.json && nyc merge packages/featureserver/.nyc_output .nyc_output/featureserver.json && nyc merge packages/koop-core/.nyc_output .nyc_output/koop-core.json && nyc merge packages/logger/.nyc_output .nyc_output/logger.json && nyc merge packages/output-geoservices/.nyc_output .nyc_output/output-geoservices.json && nyc merge packages/output-geoservices/.nyc_output .nyc_output/output-geoservices.json",
+    "cov:compile:unit": "nyc merge packages/cache-memory/.nyc_output_unit .nyc_output_unit/cache-memory.json && nyc merge packages/featureserver/.nyc_output_unit .nyc_output_unit/featureserver.json && nyc merge packages/koop-core/.nyc_output_unit .nyc_output_unit/koop-core.json && nyc merge packages/logger/.nyc_output_unit .nyc_output_unit/logger.json && nyc merge packages/output-geoservices/.nyc_output_unit .nyc_output_unit/output-geoservices.json && nyc merge packages/output-geoservices/.nyc_output_unit .nyc_output_unit/output-geoservices.json",
+    "cov:report": "nyc report --reporter=html",
+    "cov:report:unit": "nyc report --temp-dir=.nyc_output_unit --report-dir=coverage_unit --reporter=html",
     "test:e2e": "DATA_DIR=./test/provider-data jest ./test/*.spec.js",
     "version": "changeset version",
     "release:npm": "changeset publish",
@@ -52,6 +50,7 @@
     "byline": "^5.0.0",
     "commitizen": "^4.2.5",
     "commitlint": "^17.2.0",
+    "coverage-badges-cli": "^1.0.12",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.3.12",
     "eslint": "^8.23.1",
