--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -8,8 +8,10 @@
   },
   "scripts": {
     "test": "mocha '**/*.spec.js' --recursive -t 5000",
-    "test:cov": "nyc --reporter=html mocha '**/*.spec.js' ",
-    "test:cov:unit": "nyc --reporter=html mocha 'src/**/*.spec.js' "
+    "test:cov": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
+    "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit mocha 'src/**/*.spec.js' && npm run cov:badge:unit",
+    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
+    "cov:badge:unit": "coverage-badges-cli  --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg"
   },
   "contributors": [
     {
