--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -5,7 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "test:cov": "nyc --reporter=text-summary --reporter=html jest"
+    "test:cov": "nyc -r=json-summary jest && npm run cov:badge",
+    "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit jest && npm run cov:badge:unit",
+    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
+    "cov:badge:unit": "coverage-badges-cli --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg"  
   },
   "repository": {
     "type": "git",
