--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -67,8 +67,6 @@
   "scripts": {
     "test": "mocha '**/*.spec.js' ",
     "test:cov": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
-    "test:cov:unit": "nyc  -r=json-summary  --report-dir=coverage_unit --temp-dir=.nyc_output_unit mocha 'src/**/*.spec.js' && npm run cov:badge:unit",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
-    "cov:badge:unit": "coverage-badges-cli  --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg"
-  }
+    "cov:badge": "coverage-badges-cli --output ./coverage.svg"
+    }
 }
