--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tape '**/*.spec.js' | tap-spec",
-    "test:cov": "nyc -r=json-summary tape '**/*.spec.js' | tap-spec && npm run cov:badge",
+    "test:cov": "nyc -r=json-summary tape '**/*.spec.js' | tap-spec && npm run cov:badge && npm run test:cov:unit",
     "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit tape 'src/**/*.spec.js' | tap-spec && npm run cov:badge:unit",
     "cov:badge": "coverage-badges-cli --output ./coverage.svg",
     "cov:badge:unit": "coverage-badges-cli --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg",
