--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -26,6 +26,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@esri/proj-codes": "^3.1.0",
+    "@koopjs/logger": "5.0.0",
     "@koopjs/winnow": "4.0.4",
     "@terraformer/spatial": "^2.0.7",
     "chroma-js": "^2.0.0",
