--- a/packages/cache-memory/package.json
+++ b/packages/cache-memory/package.json
@@ -38,9 +38,12 @@
   "homepage": "https://github.com/koopjs/koop#readme",
   "devDependencies": {
     "tap-spec": "^5.0.0",
-    "tape": "^5.0.0"
+    "tape": "^5.0.0",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "@alloc/quick-lru": "^5.2.0",
+    "lodash": "^4.17.4",
+    "lru-cache": "^10.0.0"
   }
 }
